--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
              dolores accusamus minus tempore.
         </p>
 
-        <buttton id="parksBtn">National Parks</buttton>
-        <buttton id="mountainBtn">Mountains</buttton>
+        <button id="parksBtn">National Parks</button>
+        <button id="mountainBtn">Mountains</button>
+   
     </header>
 </body>
 </html>
