--- a/html/national-parks.html
+++ b/html/national-parks.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nationals Parks</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Nationals Parks</h1>
+        <nav>
+
+        </nav>
+    </header>
+    <section>
+        <select name="states" id="states" ></select>
+
+        <input type="text" id="parks" value= "" readonly>
+
+    </section>
 </body>
 </html>
