--- a/html/national-parks.html
+++ b/html/national-parks.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nationals Parks</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Nationals Parks</h1>
-        <nav>
-
-        </nav>
+      <h1>Nationals Parks</h1>
+      <nav></nav>
     </header>
     <section>
-        <select name="states" id="states" ></select>
+      <select name="states" id="states" >
+        <option value=""> --- Choose State ---</option>
+      </select>
+    
 
-        <input type="text" id="parks" value= "" readonly>
-
+      <select name="typesOfParks" id="typesOfParks">
+        <option value="">----Types Of Parks---</option>
+      </select>
     </section>
-</body>
+ <!--    <script>
+      function parks() {
+        console.log("it works");
+      } -->
+    </script>
+    <script src="/scripts/national-patks.js"></script>
+  </body>
 </html>
