import and export files

--- a/html/national-parks.html
+++ b/html/national-parks.html
@@ -20,12 +20,16 @@
       <select name="typesOfParks" id="typesOfParks">
         <option value="">----Types Of Parks---</option>
       </select>
+
+      <select name="nationalParks" id="nationalParks">
+        <option value="">---Choose a Park---</option>
+      </select>
     </section>
  <!--    <script>
       function parks() {
         console.log("it works");
       } -->
     </script>
-    <script src="/scripts/national-patks.js"></script>
+    <script src="/scripts/national-patks.js" type="module"></script>
   </body>
 </html>
