add if statement and push code in js to html

--- a/html/national-parks.html
+++ b/html/national-parks.html
@@ -24,6 +24,9 @@
       <select name="nationalParks" id="nationalParks">
         <option value="">---Choose a Park---</option>
       </select>
+      <br>
+      <div id="parksInfo"></div>
+      
     </section>
  <!--    <script>
       function parks() {
@@ -31,5 +34,6 @@
       } -->
     </script>
     <script src="/scripts/national-patks.js" type="module"></script>
+    
   </body>
 </html>
