arrays infomations display on browser and starting to do the same for parkTypes

--- a/html/national-parks.html
+++ b/html/national-parks.html
@@ -36,8 +36,9 @@
             <th>ZipCode</th>
             <th> Phone</th>
             <th> Fax</th>
+            <th>Visit</th>
             <th> Latitude</th>
-            <th> Longitude:</th>
+            <th> Longitude</th>
             <th>Location</th>
           
           </tr>
