create the dropdown with js and add the if statement

--- a/html/mountains.html
+++ b/html/mountains.html
@@ -7,6 +7,18 @@
     <title>Mountains</title>
 </head>
 <body>
-    
+    <header>
+        <h1>The Mountain</h1>
+    </header>
+    <section>
+        <select name="mountainNames" id="mountainNames">
+            <option value="">---Choose a Mountain---</option>
+            <div id="displayMountInfo">
+                
+            </div>
+        </select>
+
+    </section>
+    <script src="/scripts/mountains.js" type="module"></script>
 </body>
 </html>
