add some css to each html page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore the Outdoors</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>The Great Outdoors</h1>
+        <div>
+
         <nav> 
-            <h2>The Great Outdoors</h2>
+            <h1>The Great Outdoors</h1>
+            <p id="pEle">The Great Outdoors</p>
             <input type="text">
         </nav>
+        </div>
+       
+      
         <h3>About Us!</h3>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
