--- a/html/mountains.html
+++ b/html/mountains.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountains</title>
+    <link rel="stylesheet" href="/styles/mountain-parks.css">
 </head>
 <body>
     <header>
