add more css with the color of text and link buttons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
              dolores accusamus minus tempore.
         </p>
 
-        <button id="parksBtn">National Parks</button>
-        <button id="mountainBtn">Mountains</button>
+        <button id="parksBtn"><a href="html/national-parks.html">National Parks </a></button>
+        <button id="mountainBtn"><a href="html/mountains.html">Mountains</a></button>
    
     </header>
 </body>
